tests/snapshots/integration_test__tests__should_allow_brackets_to_be_used_to_wrap_expressions.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar string = (1 + 2).fmt();\nout(string);\n\"#)"
---
stdout: "3\n"
stderr: ""
error: ~
exit_code: 0
