tests/snapshots/integration_test__tests__should_allow_chaining_commutative_operators.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nout((1 + 2 + 3 + 4 - 10).fmt());\n\"#)"
---
stdout: "0\n"
stderr: ""
error: ~
exit_code: 0
