tests/snapshots/integration_test__tests__should_allow_expressions_inside_string_templates.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar variable = 123;\nout(\"My variable is: ${variable.fmt()}!\");\n\"#)"
---
stdout: "My variable is: 123!\n"
stderr: ""
error: ~
exit_code: 0
