tests/snapshots/integration_test__tests__should_allow_singleton_tuples_by_using_trailing_comma.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar string = (1 + 2,).fmt();\nout(string);\n\"#)"
---
stdout: "(3)\n"
stderr: ""
error: ~
exit_code: 0
