tests/snapshots/integration_test__tests__should_be_able_to_assign_mutable_array_to_immutable_array.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var mut array: integer[];\n        array = mut [1,2,3];\n        \"#,\n    \"\", |_| {})"
---
stdout: ""
stderr: ""
error: ~
exit_code: 0
