tests/snapshots/integration_test__tests__should_be_able_to_call_const_instance_methods_on_immutable_array.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var array = [1,2,3];\n        out(array.fmt());\n        \"#,\n    \"\", |_| {})"
---
stdout: "[1,2,3]\n"
stderr: ""
error: ~
exit_code: 0
