tests/snapshots/integration_test__tests__should_be_able_to_chain_accessors.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\nvar value = (\"string\", [1, 2, 3]);\nout(value.1.fmt());\n\"#)"
---
stdout: "[1,2,3]\n"
stderr: ""
error: ~
exit_code: 0
