tests/snapshots/integration_test__tests__should_be_able_to_create_large_objects.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var test = {\n            foo: \"bar\",\n            foo1: 1,\n            foo2: false,\n            foo3: `echo \"test\"`\n        };\n        out(test.fmt());\n        \"#,\n    \"\", |_| {})"
---
stdout: "{\n  foo: \"bar\",\n  foo1: 1,\n  foo2: false,\n  foo3: `\"echo\" \"test\"`,\n}\n"
stderr: ""
error: ~
exit_code: 0
