tests/snapshots/integration_test__tests__should_be_able_to_create_objects.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        var test = {\n            foo: \"bar\"\n        };\n        out(test.fmt());\n        \"#,\n    \"\", |_| {})"
---
stdout: "{\n  foo: \"bar\",\n}\n"
stderr: ""
error: ~
exit_code: 0
