tests/snapshots/integration_test__tests__should_be_able_to_index_array.snap
---
source: tests/integration_test.rs
expression: "run_code(r#\"\n        out([\"value\"][0]);\n        \"#, \"\", |_| {})"
---
stdout: "value\n"
stderr: ""
error: ~
exit_code: 0
